tests/fixtures/invalid/pow_bool_dict_none.py
# Cannot call pow() with Bool, Dict[str, int], None
x = pow(True, {"a": 1}, None)
